Made edits to the index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <title>
-    FabDev | Bar chart race generator
+    Racing bar-chart generator
   </title>
   <meta property="og:title" content="Opensource bar chart race generator">
   <meta property="og:description" content="Generate your own bar chart race from a csv file thanks to this open source tool made by FabDev">
@@ -29,7 +30,7 @@
   </a>
   <section class="section">
     <div class="container">
-      <h1 id="main-title" class=" text-center">Bar chart race generator</h1>
+      <h1 id="main-title" class=" text-center">Racing bar-chart generator</h1>
       <div class="card border">
         <div class="card-body">
           <div class="row">
@@ -204,7 +205,6 @@
   </div>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.min.js"></script>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
@@ -332,25 +332,25 @@
             "duration": 30,
             "top_n": 10,
             "title": "Total cases of COVID-19 per country",
-            "url": "https://raw.githubusercontent.com/FabDevGit/barchartrace/master/datasets/covid19-data.csv"
+            "url": "https://racingbarcharts.utkarshchoudhary.com/datasets/covid19-data.csv"
         },
         "stackoverflow": {
             "duration": 30,
             "top_n": 10,
             "title": "StackOverflow questions per language",
-            "url": "https://raw.githubusercontent.com/FabDevGit/barchartrace/master/datasets/stackoverflow.csv"
+            "url": "https://racingbarcharts.utkarshchoudhary.com/datasets/stackoverflow.csv"
         },
         "tennis": {
             "duration": 150,
             "top_n": 10,
             "title": "ATP tennis ranking",
-            "url": "https://raw.githubusercontent.com/FabDevGit/barchartrace/master/datasets/tennis.csv"
+            "url": "https://racingbarcharts.utkarshchoudhary.com/datasets/tennis.csv"
         },
         "co2": {
             "duration": 30,
             "top_n": 10,
             "title": "CO2 Emissions from Fossil Fuels per capita, between 1950 and 2014 (in metric tons)",
-            "url": "https://raw.githubusercontent.com/FabDevGit/barchartrace/master/datasets/co2.csv"
+            "url": "https://racingbarcharts.utkarshchoudhary.com/datasets/co2.csv"
         }
     }
 
@@ -358,9 +358,3 @@
 </script>
 </body>
 </html>
-
-
-
-
-
-
